# meet-assistant

./: .env.example  .gitignore  .npmignore  Gruntfile.js  MANIFEST.in  README.md  meet-assistant-web.py  package.json  pyproject.toml  requirements-cloud.txt  requirements.txt  vite.config.js
meet_assistant/: __init__.py  audio.py  cli.py  diarizer.py  engines.py  server.py  state.py
meet_assistant/src/: index.html  main.js  style.css
